# rapidfuzz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  danluu_example.cc  encode.h  example1.cc  fuzz_encoding.cc  main.cc  test_danluu.py  wrapper.h
examples/classify/: main.cpp
examples/counter/: CMakeLists.txt  main.cpp
examples/database/: main.cpp
examples/mapparser/: CMakeLists.txt  main.cpp
include/rapidcheck/: Check.h  Check.hpp  Random.h  Random.hpp
include/rapidcheck/detail/: FuzzData.h  NonRandomData.h  Property.h  Property.hpp  TestParams.h
src/: Check.cpp  Random.cpp
src/detail/: Configuration.cpp  FuzzData.cpp  NonRandomData.cpp  Property.cpp  TestParams.cpp  Testing.cpp  Testing.h
